# kdamn

./: .hgignore  CMakeLists.txt  UseCMakeModules.cmake  changelog.template  config.h.in  create_packages.bat  create_packages_x64.bat  create_packages_x86.bat  oembed.ini  readme.txt  revision.h.in
CMakeModules/: AndroidSupport.cmake  FindExternal.cmake  FindMSVC.cmake  FindMercurial.cmake  FindMyPNG.cmake  FindMyZLIB.cmake  FindSTLport.cmake  FindTortoiseSVN.cmake  FindWindowsSDK.cmake  GetRevision.cmake  MacSupport.cmake  NSIS.template.in  OSXToolChain.cmake  PCHSupport.cmake  QtSupport.cmake  WinSupport.cmake  common.cmake
CMakeModules/osx/: Distribution.in  Info.plist  PackageInfo.in  create_pkg.sh
CMakeModules/windows/: resources.rc
debian/: changelog  control  copyright  docs  rules
misc/: oembed.ini
misc/styles/: deviantart.css  log_default.css  screen_default.css
res/: desktop.in  icon.bat  icon.icns  icon.xpm  kdamn.desktop.in  kdamn.qrc  kdamn.xpm  resources.qrc
src/: capturedialog.cpp  capturedialog.h  channelframe.cpp  channelframe.h  channelsdialog.cpp  channelsdialog.h  chatwidget.cpp  chatwidget.h  common.cpp  common.h  configfile.cpp  configfile.h  connectdialog.cpp  connectdialog.h  cookies.cpp  cookies.h  damn.cpp  damn.h  damnchannel.cpp  damnchannel.h  damncommands.cpp  damnparsers.cpp  damnroom.cpp  damnroom.h  damntablumps.cpp  damnuser.cpp  damnuser.h  folder.cpp  folder.h  folderframe.cpp  folderframe.h  htmlformatting.cpp  htmlformatting.h  inputedit.cpp  inputedit.h  joinchanneldialog.cpp  joinchanneldialog.h  joinroomdialog.cpp  joinroomdialog.h  logfile.cpp  (+42 more)
translations/: kdamn_en.ts  kdamn_fr.ts
ui/: capturedialog.ui  channelframe.ui  channelsdialog.ui  connectdialog.ui  folderframe.ui  joinchanneldialog.ui  joinroomdialog.ui  mainwindow.ui  noteframe.ui  notesframe.ui  roomframe.ui  roomsdialog.ui  serverframe.ui  settingsdialog.ui  updatedialog.ui
